--- a/src/componets/Profile/Profile.css
+++ b/src/componets/Profile/Profile.css
@@ -8,7 +8,7 @@
 
 .avatar {
   background-color: rgb(36, 34, 34);
-  width: 45%;
+  width: 120px;
   height: 120px;
   border-radius: 50%;
   display: block;
@@ -16,7 +16,7 @@
 }
 
 .information {
-  padding: 30px 30px 0 30px;
+  padding: 30px;
 }
 
 .name {
@@ -40,7 +40,7 @@
 }
 
 .items {
-  width: 40%;
+  width: 33%;
   padding: 10px 0;
   display: flex;
   flex-direction: column;
